tests/errors/comprehensive/E5007_integer_overflow_mul.ez
/*
 * Error Test: E5007 - integer-overflow (multiplication)
 * Expected: "integer overflow"
 */

do main() {
    temp max int = 9223372036854775807  // max int64
    temp result int = max * 2  // Overflow
}
